tests/error_corpus/validation_errors/not_implemented/E700_unexpected_tier_node.cha
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child
@ID:	eng|corpus|CHI|||||Target_Child|||
@Comment:	Expected error: E700 (Unexpected tier node)
@Comment:	Trigger: Tier body contains unexpected node type
*CHI:	hello .
%mor:	pro|I v|want .
@End
